<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".StandardCalculatorActivity">

    <TextView
        android:id="@+id/displayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:importantForAutofill="no"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textAlignment="textEnd"
        android:textColor="@color/displayTextColor"
        android:textSize="@dimen/display_text_view_text_size"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scroller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayTextView">

        <TextView
            android:id="@+id/historyDisplayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="end"
            android:importantForAutofill="no"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/historyDisplayTextColor"
            android:textSize="@dimen/history_display_text_view_text_size"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/linearLayoutForButtons2"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutForButtons3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroller"
        app:layout_constraintVertical_bias="1.0">


        <Button
            android:id="@+id/cButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/roundedcbutton"
            android:onClick="buttonListener"
            android:text="@string/c_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />

        <Button
            android:id="@+id/backspaceButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="2"
            android:background="@drawable/roundedbutton"
            android:onClick="buttonListener"
            android:text="@string/backspace_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />

        <Button
            android:id="@+id/multiplyButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundedoperatorsbuttons"
            android:onClick="buttonListener"
            android:text="@string/multiply_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutForButtons3"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutForButtons4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/sevenButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:onClick="buttonListener"
            android:text="@string/seven_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />

        <Button
            android:id="@+id/eightButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:onClick="buttonListener"
            android:text="@string/eight_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />

        <Button
            android:id="@+id/nineButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:onClick="buttonListener"
            android:text="@string/nine_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />

        <Button
            android:id="@+id/divideButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundedoperatorsbuttons"
            android:onClick="buttonListener"
            android:text="@string/divide_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutForButtons4"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutForButtons5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/fourButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:onClick="buttonListener"
            android:text="@string/four_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />

        <Button
            android:id="@+id/fiveButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:onClick="buttonListener"
            android:text="@string/five_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />

        <Button
            android:id="@+id/sixButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:onClick="buttonListener"
            android:text="@string/six_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />

        <Button
            android:id="@+id/plusButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundedoperatorsbuttons"
            android:onClick="buttonListener"
            android:text="@string/plus_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutForButtons5"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutForButtons6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/oneButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:onClick="buttonListener"
            android:text="@string/one_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />

        <Button
            android:id="@+id/twoButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:onClick="buttonListener"
            android:text="@string/two_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />

        <Button
            android:id="@+id/threeButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:onClick="buttonListener"
            android:text="@string/three_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />

        <Button
            android:id="@+id/minusButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundedoperatorsbuttons"
            android:onClick="buttonListener"
            android:text="@string/minus_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutForButtons6"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/negativePositiveButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:onClick="buttonListener"
            android:text="@string/negative_positive_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />

        <Button
            android:id="@+id/zeroButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:onClick="buttonListener"
            android:text="@string/zero_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />

        <Button
            android:id="@+id/dotButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:onClick="buttonListener"
            android:text="@string/dot_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />

        <Button
            android:id="@+id/equalButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundedequalbutton"
            android:onClick="buttonListener"
            android:text="@string/equal_button"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/standard_calculator_button_text_size"
            android:typeface="serif" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>