<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PercentageSplit"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/PercentageSplitTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PercentageSplitTextView"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textColor="@color/displayTextColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="657dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PercentageSplitTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/vatRateTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/PercentageTextView"
                android:textColor="@color/displayTextColor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/percentageEditTextNumbers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="2"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/displayTextColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/PercentSign"
                android:textColor="@color/displayTextColor"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/AmountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/AmountTextView"
            android:textAlignment="textStart"
            android:textColor="@color/displayTextColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/amountEditTextNumbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="textStart"
            android:textColor="@color/displayTextColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/ResultTextView"
            android:textAlignment="textStart"
            android:textColor="@color/displayTextColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/resultEditTextNumbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColor="@color/displayTextColor"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>