<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VatCalculatorActivity"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/vatCalculatorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/vatTextView"
        android:textAlignment="center"
        android:textColor="@color/displayTextColor"
        android:textSize="30sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="657dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vatCalculatorTextView">

        <LinearLayout
            android:id="@+id/linearLayoutHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="60dp">

            <TextView
                android:id="@+id/vatRateTextView"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/vatRateTextView"
                android:typeface="serif"
                android:textColor="@color/displayTextColor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/vatRateEditTextNumbers"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                android:typeface="serif"
                android:textColor="@color/displayTextColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/PercentTextView"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/PercentSign"
                android:textColor="@color/displayTextColor"
                android:textSize="20sp" />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutHorizontal2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/amountWithoutVatTextView"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/amountWithoutVatTextView"
            android:typeface="serif"
            android:gravity="center_vertical"
            android:textColor="@color/displayTextColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/amountWithoutVatEditTextNumbers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:typeface="serif"
            android:textColor="@color/displayTextColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/currencySignTextView"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/CurrencySignEuroTextView"
            android:textColor="@color/displayTextColor"
            android:textSize="20sp" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutHorizontal3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/vatTextView"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/vatTextView2"
            android:typeface="serif"
            android:gravity="center_vertical"
            android:textColor="@color/displayTextColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/vatEditTextNumbers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:typeface="serif"
            android:textColor="@color/displayTextColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/currencySignTextView2"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/CurrencySignEuroTextView"
            android:textColor="@color/displayTextColor"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutHorizontal4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/totalTextView"
            android:typeface="serif"
            android:gravity="center_vertical"
            android:textColor="@color/displayTextColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/totalEditTextNumbers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:typeface="serif"
            android:textColor="@color/displayTextColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/currencySignTextView3"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/CurrencySignEuroTextView"
            android:textColor="@color/displayTextColor"
            android:textSize="20sp" />

    </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>